Build: Update node-sass to build on node 20 Upload: Change in URL Tests: Remove border-collapse - no longer relevnt in DT2

--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -196,7 +196,7 @@ div.datatables-debug--upload-ready {
 	border: 1px solid transparent;
 	padding: 12px;
 	margin: 10px auto;
-	width: 50%;
+	width: 75%;
 	text-align: center;
 }
 
